# jpower

./: LICENSE  README.md
src/calapp/: JPowerApp.sln
src/calapp/JPowerApp/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  JPowerApp.csproj  MainPage.xaml.cs  MauiProgram.cs
src/calapp/JPowerApp/JPowerApp/: App.xaml  JPowerApp.csproj  MainPage.xaml  MauiProgram.cs
src/calapp/JPowerApp/Shared/Models/: BleDeviceInfo.cs  BleDeviceManager.cs  BleDeviceModel.cs  BleServiceUUIDs.cs
src/calapp/JPowerApp/Shared/Services/: AlertService.cs  IAlertService.cs  IJPowerDiscoveryService.cs  INavigationService.cs  IPermissionsService.cs  Interface1.cs  JPowerDiscoveryService.cs  NavigationService.cs  PermissionsService.cs
src/calapp/JPowerApp/Shared/UI/: CalibratePageView.xaml  CalibratePageViewModel.cs  ConnectPageView.xaml  (+2 more)
src/jpower-apps/: jpower-apps.sln
src/jpower-apps/CalApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BluetoothPermissions.cs  CalApp.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/jpower-apps/CalApp/Services/: INavigationService.cs  IPermissionsService.cs  NavigationService.cs  PermissionsService.cs
src/jpower-apps/CalApp/UI/: BleDeviceInfoView.xaml  BleDeviceInfoView.xaml.cs  BleDeviceServicesView.xaml  BleDeviceServicesView.xaml.cs  CalibrationPageView.xaml  CalibrationPageView.xaml.cs  CalibrationPageViewModel.cs  ConnectPageView.xaml  ConnectPageViewModel.cs  DeviceInfoPageView.xaml  DeviceInfoPageView.xaml.cs  DeviceInfoPageViewModel.cs  DeviceOverviewView.xaml  DeviceOverviewView.xaml.cs  DeviceOverviewViewModel.cs  JPowerDeviceView.xaml  JPowerDeviceView.xaml.cs  MeasurementsView.xaml  MeasurementsView.xaml.cs  SlopeResultPageView.xaml  SlopeResultPageView.xaml.cs  SlopeResultPageViewModel.cs
src/jpower-apps/JPower.DiagnosticsApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  JPower.DiagnosticsApp.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/jpower-apps/JPower.DiagnosticsApp/Services/: INavigationService.cs  IPermissionsService.cs  NavigationService.cs  PermissionsService.cs
src/jpower-apps/JPower.DiagnosticsApp/UI/: DiagnosticsPageView.xaml  DiagnosticsPageView.xaml.cs  DiagnosticsPageViewModel.cs  ScanPageView.xaml  ScanPageView.xaml.cs  ScanPageViewModel.cs
src/jpower-apps/JPower.Shared/: Class1.cs  JPower.Shared.csproj
src/jpower-apps/JPower.Shared/Ble/: BleDevice.cs  BleDeviceCharacteristic.cs  BleDeviceInfo.cs  BleDeviceService.cs  BleDeviceState.cs  BleScanningState.cs  BleService.cs  BleValueConverters.cs  IBleDevice.cs  IBleDeviceCharacteristic.cs  IBleDeviceService.cs  SimulatedBleDevice.cs  SimulatedBleDeviceCharacteristic.cs  SimulatedBleDeviceService.cs  SimulatedBleService.cs
src/jpower-apps/JPower.Shared/Calibration/: CalibrationContext.cs  Measurement.cs  Slope.cs
src/jpower-apps/JPower.Shared/Converters/: JPStateToStringConverter.cs
src/jpower-apps/JPower.Shared/JPower/: IJPowerDevice.cs  ILegacyJPowerDevice.cs  JPowerBleUUIDs.cs  JPowerDevice.cs  JPpowerConverters.cs  LegacyJPowerBleUUIDs.cs  LegacyJPowerDevice.cs  LegacySimulatedJPowerDevice.cs  SimulatedJPowerDevice.cs  Vector3D.cs
src/jpower-apps/JPower.Shared/Mvvm/: ServiceProvider.cs  ViewModelBase.cs
src/jpower-apps/JPower.Shared/Services/: AlertService.cs  AppContext.cs  BleService.cs  IAlertService.cs  IAppContext.cs  IBleService.cs  ICalibrationContext.cs  IPermissionsService.cs  PermissionsService.cs  SimulatedBleService.cs
src/jpower-apps/JPower.Shared/UI/: BleDeviceInfoView.xaml  BleDeviceInfoView.xaml.cs  BleDeviceServicesView.xaml  BleDeviceServicesView.xaml.cs  JPowerDeviceView.xaml  JPowerDeviceView.xaml.cs  JPowerDiagnosticsView.xaml  JPowerDiagnosticsView.xaml.cs  MeasurementsView.xaml  MeasurementsView.xaml.cs  Vector3DView.xaml  Vector3DView.xaml.cs
src/jpower-apps/jpower-apps/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  jpower-apps.csproj
src/nrf52/: .gitignore  CMakeLists.txt  CMakePresets.json  README.txt
src/nrf52/board/: jpower_v1.cmake  jpower_v1.h  seeed_xiao_sense.cmake  seeed_xiao_sense.h
src/nrf52/cmake/: CustomBoard.cmake  CustomSoftDevice.cmake  jpowlib.cmake  s340_6.1.1.cmake
src/nrf52/lib/ad779x/: ad779x.c  ad779x.h  strain.c  strain.h
src/nrf52/lib/ant_plus/: ant_subsystem.c  ant_subsystem.h
src/nrf52/lib/ble/: ble_srv_helper.c  ble_srv_helper.h  ble_subsystem.c  ble_subsystem.h  ble_subsystem_settings.h
src/nrf52/lib/calibrate/: calibrate.c  calibrate.h  calibrate_srv.c  calibrate_srv.h
src/nrf52/lib/i2c/: i2c_helper.c  i2c_helper.h
src/nrf52/lib/imu/: cadence.c  cadence.h  imu.c  imu.h  imu_srv.c  imu_srv.h  imu_types.h  lsm6dso_reg.c  lsm6dso_reg.h
src/nrf52/lib/lsm6ds/: imu.c  imu.h
src/nrf52/lib/math/: jpow_math.c  jpow_math.h
src/nrf52/lib/sensor/: sensor_ble_srv.c  sensor_ble_srv.h  sensor_subsystem.c  sensor_subsystem.h
src/nrf52/lib/spi/: spi_helper.c  spi_helper.h
src/nrf52/lib/state/: jp_state.c  jp_state.h  jp_state_srv.c  jp_state_srv.h
src/nrf52/lib/storage/: storage_helper.c  storage_helper.h
src/nrf52/lib/strain/: ad779x.c  ad779x.h  strain.c  strain.h
src/nrf52/lib/usb/: usb_subsystem.c  usb_subsystem.h
src/nrf52/lib/utils/: battery.c  battery.h  jp_utils.c  jp_utils.h  led_control.c  led_control.h
src/nrf52/nRF5-cmake-scripts/: nRF5-cmake.cmake
src/nrf52/nRF5-cmake-scripts/includes/: libraries.cmake  secure_bootloader.cmake
src/nrf52/src/: CMakeLists.txt
src/nrf52/src/blinky/: CMakeLists.txt  app_config.h  main.c
src/nrf52/src/calibrate/: CMakeLists.txt  app_config.h  main.c
src/nrf52/src/calibrate-test/: CMakeLists.txt  app_config.h  gcc_nrf52.ld  main.c
src/nrf52/src/dfu/: dfu_public_key.c
src/nrf52/src/fds-test/: CMakeLists.txt  app_config.h  main.c
src/nrf52/src/fdstest/: CMakeLists.txt  main.c
src/nrf52/src/jpower/: CMakeLists.txt  app_config.h  gcc_nrf52.ld  main.c
src/nrf52/src/jpower_old/: main.c
src/nrf52/src/sandbox/: CMakeLists.txt  app_config.h  main.c  sdk_config.h
src/nrf52/src/toolchain-test/: CMakeLists.txt
(+93 files in other folders)
